# GL-oard

./: .gitignore  README.md  pyproject.toml
.github/workflows/: codeql-analysis.yml
src/: __main__.py  app.py  data.py  globals.py  server.py
src/resolvers/: queries.py  utils.py
src/resolvers/issues/: queries.py
src/resolvers/projects/: queries.py
src/resolvers/todos/: queries.py
src/sdl/: Query.graphql  types.graphql
